--- a/header.html
+++ b/header.html
@@ -5,9 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     
-    <link href="/css/main.min.css" rel="stylesheet" >
-    <link rel="stylesheet"
-    href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+  
+    <link rel="stylesheet" href="./css/main.min.css">
 
     <link rel="stylesheet" href="./style.css">
 </head>
